--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/boot_mvc?createDatabaseIfNotExist=true
-spring.datasource.username=root
+# POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/boot_mvc?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
