Alterado a senha do BD em ambiente dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/boot_mvc?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
